k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: smstore-partner-site
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    certmanager.k8s.io/acme-challenge-type: dns01
    certmanager.k8s.io/acme-dns01-provider: cloudflare
    ingress.kubernetes.io/force-ssl-redirect: "true"
    ingress.kubernetes.io/ssl-redirect: "true" 
spec:
  tls:
  - hosts:
    - "*.tiemcuatui.com"
    secretName: wildcard-tiemcuatui-com-tls
  rules:
  - host: "*.tiemcuatui.com"
    http:
      paths:
      - path: /
        backend:
          serviceName: smstore-partner-site
          servicePort: 80
